--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
+    "tsx": "^4.19.3",
     "typeorm": "^0.3.20",
     "zod": "^3.24.2"
   },
